log
Fri Mar 27 05:43:57 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
1260181
Fri Mar 27 06:12:53 PM UTC 2026: 
 list.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:82:27: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   82 |         newNode -> prev = current;
      |                           ^~~~~~~
      |                           popCurrent
list.c:82:27: note: each undeclared identifier is reported only once for each function it appears in
list.c:92:9: error: ‘list_current_next’ undeclared (first use in this function)
   92 |         list_current_next = newNode;
      |         ^~~~~~~~~~~~~~~~~
list.c: At top level:
list.c:99:1: error: expected identifier or ‘(’ before ‘}’ token
   99 | }
      | ^
bdd467f
Fri Mar 27 06:13:22 PM UTC 2026: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:82:27: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   82 |         newNode -> prev = current;
      |                           ^~~~~~~
      |                           popCurrent
list.c:82:27: note: each undeclared identifier is reported only once for each function it appears in
list.c:92:9: error: ‘list_current_next’ undeclared (first use in this function)
   92 |         list_current_next = newNode;
      |         ^~~~~~~~~~~~~~~~~
6139d9b
Fri Mar 27 06:14:00 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:82:25: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   82 |         newNode->prev = current;
      |                         ^~~~~~~
      |                         popCurrent
list.c:82:25: note: each undeclared identifier is reported only once for each function it appears in
15becfb
Fri Mar 27 06:14:28 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:82:23: error: assignment to ‘Node *’ from incompatible pointer type ‘void * (*)(List *)’ {aka ‘void * (*)(struct List *)’} [-Wincompatible-pointer-types]
   82 |         newNode->prev = popCurrent;
      |                       ^
e42633d
Fri Mar 27 06:14:37 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:82:23: error: comparison of distinct pointer types lacks a cast [-Werror=compare-distinct-pointer-types]
   82 |         newNode->prev == popCurrent;
      |                       ^~
list.c:82:23: error: statement with no effect [-Werror=unused-value]
   82 |         newNode->prev == popCurrent;
      |         ~~~~~~~~~~~~~~^~~~~~~~~~~~~
cc1: all warnings being treated as errors
60977d2
Fri Mar 27 06:15:23 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:82:23: error: statement with no effect [-Werror=unused-value]
   82 |         newNode->prev == list->current;
      |         ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
3746a4a
Fri Mar 27 06:15:36 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
40d123b
Fri Mar 27 06:19:51 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/60
b962e01
Sun Mar 29 02:59:42 AM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:18: error: initialization of ‘List *’ {aka ‘struct List *’} from incompatible pointer type ‘Node *’ [-Wincompatible-pointer-types]
   38 |      List *new = (Node *)malloc(sizeof(List));
      |                  ^
list.c:39:10: error: expected identifier or ‘(’ before ‘->’ token
   39 |      List->data = NULL;
      |          ^~
list.c:40:10: error: expected identifier or ‘(’ before ‘->’ token
   40 |      List->prev = NULL;
      |          ^~
list.c:41:10: error: expected identifier or ‘(’ before ‘->’ token
   41 |      List->next = NULL;
      |          ^~
list.c:38:12: error: unused variable ‘new’ [-Werror=unused-variable]
   38 |      List *new = (Node *)malloc(sizeof(List));
      |            ^~~
cc1: all warnings being treated as errors
1d6c0a5
Sun Mar 29 03:01:11 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:39:10: error: expected identifier or ‘(’ before ‘->’ token
   39 |      List->data = NULL;
      |          ^~
list.c:40:10: error: expected identifier or ‘(’ before ‘->’ token
   40 |      List->prev = NULL;
      |          ^~
list.c:41:10: error: expected identifier or ‘(’ before ‘->’ token
   41 |      List->next = NULL;
      |          ^~
list.c:38:12: error: unused variable ‘new’ [-Werror=unused-variable]
   38 |      List *new = (List *)malloc(sizeof(List));
      |            ^~~
cc1: all warnings being treated as errors
77a7e7f
Sun Mar 29 03:02:52 AM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:39:10: error: expected identifier or ‘(’ before ‘->’ token
   39 |      List->current = NULL;
      |          ^~
list.c:40:10: error: expected identifier or ‘(’ before ‘->’ token
   40 |      List->head = NULL;
      |          ^~
list.c:41:10: error: expected identifier or ‘(’ before ‘->’ token
   41 |      List->tail = NULL;
      |          ^~
list.c:38:12: error: unused variable ‘new’ [-Werror=unused-variable]
   38 |      List *new = (List *)malloc(sizeof(List));
      |            ^~~
cc1: all warnings being treated as errors
eb26aee
Sun Mar 29 03:03:23 AM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/60
82661f7
Sun Mar 29 03:03:57 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:39:21: error: ‘data’ undeclared (first use in this function)
   39 |      new->current = data;
      |                     ^~~~
list.c:39:21: note: each undeclared identifier is reported only once for each function it appears in
b59039a
Sun Mar 29 03:05:31 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:39:21: error: ‘data’ undeclared (first use in this function)
   39 |      new->current = data;
      |                     ^~~~
list.c:39:21: note: each undeclared identifier is reported only once for each function it appears in
afac49b
Sun Mar 29 03:05:55 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/60
6b83190
